--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,9 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.company</groupId>
+  <groupId>bg.inv</groupId>
   <version>1.0-SNAPSHOT</version>
-  <artifactId>myProject</artifactId>
+  <artifactId>model-based-testing</artifactId>
   <name>GraphWalker Example</name>
 
   <properties>
